--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ."
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@pandax185"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
